Adaptação para incluir na Namespace CodeCraft

--- a/QUnit/tests.html
+++ b/QUnit/tests.html
@@ -81,7 +81,7 @@
 
 
             module('Métodos para interação com interface');
-
+            var Interface = CodeCraft.Interface;
 
             // Prepara os links externos para abrirem em outra aba.
             Interface.SetAnchorToNewPage();
