Alterado prefixo dos atributos "data-" para "data-cc-"

--- a/QUnit/tests.html
+++ b/QUnit/tests.html
@@ -102,7 +102,7 @@
             var oBody = document.getElementsByTagName('body')[0];
             var newDiv = document.createElement('div');
             newDiv.id = 'newDiv';
-            newDiv.setAttribute('data-dragme', 'true');
+            newDiv.setAttribute('data-cc-dragme', 'true');
             newDiv.style.cssFloat = 'left';
             newDiv.style.width = '100px';
             newDiv.style.height = '100px';
