Ajuste da documentação.

--- a/QUnit/tests.html
+++ b/QUnit/tests.html
@@ -7,8 +7,8 @@
         
         
         <script src="resources/qunit.js"></script>
-        <script src="https://raw.githubusercontent.com/AeonDigital/Code-Craft-js_BasicTools/master/BasicTools.js"></script>
-        <script src="https://raw.githubusercontent.com/AeonDigital/Code-Craft-js_BasicDOM/master/BasicDOM.js"></script>
+        <script src="https://rawgit.com/AeonDigital/Code-Craft-js_BasicTools/master/BasicTools.js"></script>
+        <script src="https://rawgit.com/AeonDigital/Code-Craft-js_BasicDOM/master/BasicDOM.js"></script>
         <script src="../Interface.js"></script>
     </head>
     <body>
