--- a/QUnit/tests.html
+++ b/QUnit/tests.html
@@ -102,7 +102,7 @@
             var oBody = document.getElementsByTagName('body')[0];
             var newDiv = document.createElement('div');
             newDiv.id = 'newDiv';
-            newDiv.setAttribute('data-cc-dragme', 'true');
+            newDiv.setAttribute('data-ccw-drag', 'true');
             newDiv.style.cssFloat = 'left';
             newDiv.style.width = '100px';
             newDiv.style.height = '100px';
@@ -112,6 +112,15 @@
             newDiv.style.backgroundColor = 'transparent';
             newDiv.style.zIndex = '1';
             oBody.appendChild(newDiv);
+
+            var divTitle = document.createElement('div');
+            divTitle.setAttribute('data-ccw-drag-pointer', 'true');
+            divTitle.style.width = '100%';
+            divTitle.style.height = '20px';
+            divTitle.style.backgroundColor = 'blue';
+            divTitle.style.color = '#FFF';
+            divTitle.textContent = 'Drag-me';
+            newDiv.appendChild(divTitle);
 
 
 
@@ -173,6 +182,7 @@
                     newDiv.style.position = 'absolute';
                     newDiv.style.left = '150px';
                     newDiv.style.top = '50px';
+                    Interface.SetDragElement();
                     Interface.SetDragElement();
                 }
             });
