--- a/QUnit/tests.html
+++ b/QUnit/tests.html
@@ -25,14 +25,14 @@
                 border: 1px solid #000;
                 position: absolute;
             }
-            [data-ccw-resize-pointer="nw"] { left: -3px; top: -3px; cursor: nw-resize; }
-            [data-ccw-resize-pointer="ne"] { top: -3px; right: -3px; cursor: ne-resize; }
-            [data-ccw-resize-pointer="sw"] { bottom: -3px; left: -3px; cursor: sw-resize; }
-            [data-ccw-resize-pointer="se"] { bottom: -3px; right: -3px; cursor: se-resize; }
-            [data-ccw-resize-pointer="n"] { top: -3px; left: 50%; cursor: n-resize; }
-            [data-ccw-resize-pointer="s"] { bottom: -3px; left: 50%; cursor: s-resize; }
-            [data-ccw-resize-pointer="w"] { left: -3px; top:calc(50% - 3px); cursor: w-resize; }
-            [data-ccw-resize-pointer="e"] { right: -3px; top:calc(50% - 3px); cursor: e-resize; }
+            [data-ccw-resize-pointer="nw"] { left: -4px; top: -4px; cursor: nw-resize; }
+            [data-ccw-resize-pointer="ne"] { top: -4px; right: -4px; cursor: ne-resize; }
+            [data-ccw-resize-pointer="sw"] { bottom: -4px; left: -4px; cursor: sw-resize; }
+            [data-ccw-resize-pointer="se"] { bottom: -4px; right: -4px; cursor: se-resize; }
+            [data-ccw-resize-pointer="n"] { top: -4px; left:calc(50% - 4px); cursor: n-resize; }
+            [data-ccw-resize-pointer="s"] { bottom: -4px; left:calc(50% - 4px); cursor: s-resize; }
+            [data-ccw-resize-pointer="w"] { left: -4px; top:calc(50% - 4px); cursor: w-resize; }
+            [data-ccw-resize-pointer="e"] { right: -4px; top:calc(50% - 4px); cursor: e-resize; }
         </style>
     </head>
     <body>
