Adicionado método para abrir links direto em popup.

--- a/QUnit/tests.html
+++ b/QUnit/tests.html
@@ -61,7 +61,8 @@
 
         <div>
             <a href="foo.html">Abre na mesma aba</a><br />
-            <a href="http://www.terra.com.br">Abre em outra aba</a>
+            <a href="http://www.gizmodo.com.br">Abre em outra aba</a><br />
+            <a href="http://www.gizmodo.com.br" data-ccw-popup="popgiz,yes,no,800,600">Abre em popup</a>
             <br /><br /><br />
 
             <a href="#anc2" id="anc1">Primeira</a>
@@ -132,6 +133,8 @@
             Interface.SetAnchorToNewPage();
             // Seta animação para rolagem das ancoras
             Interface.SetAnchorAnimation();
+            // Seta os links de popups
+            Interface.SetAnchorPopup();
 
 
 
