Corrigido CSS para imagem do crop.

--- a/QUnit/drag-crop-resize.html
+++ b/QUnit/drag-crop-resize.html
@@ -64,6 +64,8 @@
                 top: 0;
                 left: 0;
                 z-index: 1;
+                
+                box-sizing: border-box;
             }
             [data-ccw-crop-shadow] {
                 width: 100%;
