Ajustes simples no código. Padronização.

--- a/QUnit/drag-crop-resize.html
+++ b/QUnit/drag-crop-resize.html
@@ -19,6 +19,7 @@
                 box-sizing: border-box;
 
                 background-color: #FFF;
+                cursor: move;
             }
             [data-ccw-resize-limit] {
                 overflow: hidden;
