--- a/QUnit/tests.html
+++ b/QUnit/tests.html
@@ -20,6 +20,7 @@
                 box-sizing: border-box;
 
                 background-color: #FFF;
+                cursor: move;
             }
             [data-ccw-resize-limit] {
                 overflow: hidden;
