Correção para CSS

--- a/QUnit/drag-crop-resize.html
+++ b/QUnit/drag-crop-resize.html
@@ -11,6 +11,7 @@
 
         <style>
             body {margin: 0; padding: 0;}
+            [data-ccw-drag] {cursor: move;}
             [data-ccw-resize] {
                 position: absolute;
                 z-index: 2;
@@ -19,7 +20,6 @@
                 box-sizing: border-box;
 
                 background-color: #FFF;
-                cursor: move;
             }
             [data-ccw-resize-limit] {
                 overflow: hidden;
