--- a/QUnit/tests.html
+++ b/QUnit/tests.html
@@ -12,6 +12,7 @@
         <script src="../Interface.js"></script>
 
         <style>
+            [data-ccw-drag] {cursor: move;}
             [data-ccw-resize] {
                 position: absolute;
                 z-index: 2;
@@ -20,7 +21,6 @@
                 box-sizing: border-box;
 
                 background-color: #FFF;
-                cursor: move;
             }
             [data-ccw-resize-limit] {
                 overflow: hidden;
