--- a/QUnit/tests.html
+++ b/QUnit/tests.html
@@ -53,6 +53,8 @@
             [data-ccw-resize-ratio] [data-ccw-resize-pointer="s"],
             [data-ccw-resize-ratio] [data-ccw-resize-pointer="w"],
             [data-ccw-resize-ratio] [data-ccw-resize-pointer="e"] {display: none;}
+        
+            [data-ccw-resize-fix] [data-ccw-resize-pointer] {display: none;}
         </style>
     </head>
     <body>
